force-app/main/default/objects/CacheValue__mdt/CacheValue__mdt.object-meta.xml
<CustomObject>
    <label>CacheValue</label>
    <pluralLabel>Cache Values</pluralLabel>
</CustomObject>