force-app/main/default/objects/CacheValue__mdt/fields/Cache__c.field-meta.xml
<CustomField>
    <fullName>Cache__c</fullName>
    <label>Cache Configuration</label>
    <referenceTo>Cache_Configuration__mdt</referenceTo>
    <relationshipLabel>Cache Values</relationshipLabel>
    <relationshipName>Cache_Values</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>