force-app/main/default/objects/CacheValue__mdt/fields/DataType__c.field-meta.xml
<CustomField>
    <fullName>DataType__c</fullName>
    <label>Data Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>