force-app/main/default/objects/CacheValue__mdt/fields/IsEnabled__c.field-meta.xml
<CustomField>
    <fullName>IsEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Enabled</label>
    <type>Checkbox</type>
</CustomField>